--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "es6-promise": "^4.2.8",
+    "gh-pages": "^2.1.1",
+    "install": "^0.13.0",
+    "isomorphic-fetch": "^2.2.1",
+    "npm": "^6.12.0",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
   },
